--- a/chill-spots.html
+++ b/chill-spots.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="Explore peaceful chill spots in Rotterdam for relaxation and a break from city life. Find directions and learn more about each spot's unique charm.">
   <meta name="keywords"
-    content="Chill spots, Rotterdam, relaxation, nature, peaceful, Kralingse Bos, Jan Evertsenplaats, Joost Banckertsplaats, Schouwburgplein">
+    content="Kralingse Bos, Jan Evertsenplaats, Joost Banckertsplaats, Schouwburgplein, relaxation spots in the Netherlands">
   <meta name="author" content="Leandro A Nuñez B">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
@@ -22,7 +22,7 @@
   <main>
     <header class="hero-section">
       <section class="hero-content chill-spots">
-        <h2 class="visually-hidden">All content regarding the hero section.</h2>
+        <h2 class="hidden-from-view">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
@@ -47,10 +47,10 @@
   </main>
 
   <!-- LOOKING FOR A RELAXED SPOT SECTION -->
-  <section class="section-4">
-    <h2 class="visually-hidden">Main container of "Looking for a relaxed spot" section.</h2>
+  <section class="section-4 relaxing-spots">
+    <h2 class="hidden-from-view">Main container of "Looking for a relaxed spot" section.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">Inner container of "Looking for a relaxed spot" section.</h2>
+      <h2 class="hidden-from-view">Inner container of "Looking for a relaxed spot" section.</h2>
       <article>
         <h2>Looking for a relaxed spot in Rotterdam? You are in the right place!</h2>
         <h3>Here are four unique chill spots in Rotterdam</h3>
@@ -65,11 +65,11 @@
 
   <!-- IMAGE BLOCKS SECTION -->
   <section class="image-blocks">
-    <h2 class="visually-hidden">Main container of "Image blocks" section.</h2>
+    <h2 class="hidden-from-view">Main container of "Image blocks" section.</h2>
     <section class="inner-blocks white-background">
-      <h2 class="visually-hidden">Image and articles wrapper for Kralingse Bos.</h2>
+      <h2 class="hidden-from-view">Image and articles wrapper for Kralingse Bos.</h2>
       <section class="image-block-1  img-chill-spots">
-        <h2 class="visually-hidden">Image and articles wrapper.</h2>
+        <h2 class="hidden-from-view">Image and articles wrapper.</h2>
         <img src="img/connect-nature.webp" alt="Image of Kralingse Bos park in Rotterdam"
           title="Kralingse Bos - Park in Rotterdam" class="image-block">
         <article>
@@ -85,7 +85,7 @@
       </section>
 
       <section class="image-block-2  img-chill-spots">
-        <h2 class="visually-hidden">Image and articles wrapper for Jan Evertsenplaats.</h2>
+        <h2 class="hidden-from-view">Image and articles wrapper for Jan Evertsenplaats.</h2>
         <img src="img/wellbeing-tips-header.webp" alt="Jan Evertsenplaats in the heart of Rotterdam"
           title="Jan Evertsenplaats - Quiet park in Rotterdam" class="image-block">
         <article>
@@ -103,11 +103,11 @@
 
   <!-- IMAGE BLOCKS SECTION -->
   <section class="image-blocks">
-    <h2 class="visually-hidden">Main container of "Image blocks" section.</h2>
+    <h2 class="hidden-from-view">Main container of "Image blocks" section.</h2>
     <section class="inner-blocks">
-      <h2 class="visually-hidden">Inner container of "Image blocks" section.</h2>
+      <h2 class="hidden-from-view">Inner container of "Image blocks" section.</h2>
       <section class="image-block-1 img-chill-spots">
-        <h2 class="visually-hidden">Image and articles wrapper for Joost Banckertsplaats.</h2>
+        <h2 class="hidden-from-view">Image and articles wrapper for Joost Banckertsplaats.</h2>
         <img src="img/Joost.webp" alt="Quiet green space at Joost Banckertsplaats in Rotterdam"
           title="Joost Banckertsplaats - Relaxing green area in Rotterdam" class="image-block">
         <article>
@@ -124,7 +124,7 @@
       </section>
 
       <section class="image-block-2 img-chill-spots">
-        <h2 class="visually-hidden">Image and articles wrapper for Schouwburgplein.</h2>
+        <h2 class="hidden-from-view">Image and articles wrapper for Schouwburgplein.</h2>
         <img src="img/Scchowburgplein.webp" alt="Schouwburgplein square in Rotterdam with modern design"
           title="Schouwburgplein - Urban square in Rotterdam" class="image-block">
         <article>
@@ -156,7 +156,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h3 class="visually-hidden">Footer Information and Social Links.</h3>
+      <h3 class="hidden-from-view">Footer Information and Social Links.</h3>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
