--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <main>
         <header class="hero-section">
             <section class="hero-content contact-us">
-                <h2 class="visually-hidden">All content regarding the hero section.</h2>
+                <h2 class="hidden-from-view">All content regarding the hero section.</h2>
                 <nav class="main-navigation">
                     <figure class="brand-logo">
                         <a href="index.html">
@@ -46,9 +46,9 @@
 
     <!-- CONTACT SECTION -->
     <section class="contact-section">
-        <h2 class="visually-hidden">Main container for the "Contact" section.</h2>
+        <h2 class="hidden-from-view">Main container for the "Contact" section.</h2>
         <section class="contact-container">
-            <h2 class="visually-hidden">Inner container for the contact form and image.</h2>
+            <h2 class="hidden-from-view">Inner container for the contact form and image.</h2>
             <figure class="picture">
                 <img src="img/Contact-Page-picture.webp" alt="Contact of a calm park (Kralingse Bos)"
                     title="Tranquil View of Kralingse Bos Park's Serene Landscape">
@@ -109,7 +109,7 @@
     <!-- This is not part of my FIGMA design, but I included it because I had no other way of including a table. (So I included it here.)-->
     <!-- I added some information that links to my website. -->
     <section class="table">
-        <h2 class="visually-hidden">Table for the assessment.</h2>
+        <h2 class="hidden-from-view">Table for the assessment.</h2>
         <table>
             <caption>Impact of Work-Life Balance on Depression</caption>
             <tr>
@@ -135,7 +135,7 @@
             </tr>
         </table>
         <section class="take-care">
-            <h2 class="visually-hidden">Reminder to Take Care</h2>
+            <h2 class="hidden-from-view">Reminder to Take Care</h2>
             <img src="img/take-care-picture.jpg" alt="A picture with a profound message."
                 title="A picture remainding us to take care of ourself" class="take-care-picture">
         </section>
@@ -156,7 +156,7 @@
             </ul>
         </nav>
         <section class="copyright">
-            <h3 class="visually-hidden">Footer Information and Social Links.</h3>
+            <h3 class="hidden-from-view">Footer Information and Social Links.</h3>
             <figure class="footer-logo">
                 <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
                     title="Work Balance logo in footer">
