--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -5,6 +5,11 @@
     <title>Thank you for contacting us</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Leandro A Nuñez B">
+    <meta name="keywords"
+        content="Work Balance, wellbeing tips, relaxation spots, remote work support, mental health resources">
+    <meta name="description"
+        content="Thank you for contacting Work Balance! We have received your message and will get back to you shortly.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
@@ -15,7 +20,7 @@
     <main>
         <header class="hero-section">
             <section class="hero-content thank-you">
-                <h2 class="visually-hidden">All content regarding the hero section.</h2>
+                <h2 class="hidden-from-view">All content regarding the hero section.</h2>
                 <nav class="main-navigation">
                     <figure class="brand-logo">
                         <a href="index.html">
@@ -65,7 +70,7 @@
             </ul>
         </nav>
         <section class="copyright">
-            <h3 class="visually-hidden">Footer Information and Social Links.</h3>
+            <h3 class="hidden-from-view">Footer Information and Social Links.</h3>
             <figure class="footer-logo">
                 <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
                     title="Work Balance logo in footer">
