--- a/workspace-tips.html
+++ b/workspace-tips.html
@@ -8,8 +8,7 @@
   <meta name="author" content="Leandro A Nuñez B">
   <meta name="description"
     content="Explore essential tips for creating a comfortable workspace that enhances productivity, mental well-being, and creativity for remote work success.">
-  <meta name="keywords"
-    content="workspace tips, productivity, remote work, comfortable workspace, ergonomics, mental well-being, work-life balance, creativity">
+  <meta name="keywords" content="workspace tips, productivity, remote work, comfortable workspace, mental well-being">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -21,7 +20,7 @@
   <main>
     <header class="hero-section">
       <section class="hero-content workspace-tips">
-        <h2 class="visually-hidden">All content regarding the hero section.</h2>
+        <h2 class="hidden-from-view">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
@@ -47,9 +46,9 @@
 
   <!-- COMFORTABLE WORKSPACE SECTION -->
   <section class="section-4">
-    <h2 class="visually-hidden">Main container for the "Comfortable Workspace" section.</h2>
+    <h2 class="hidden-from-view">Main container for the "Comfortable Workspace" section.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">Content about the benefits of a comfortable workspace.</h2>
+      <h2 class="hidden-from-view">Content about the benefits of a comfortable workspace.</h2>
       <article>
         <h2>The Importance of a Comfortable Workspace</h2>
         <p>
@@ -65,16 +64,16 @@
 
   <!-- BENEFITS OF A COMFORTABLE WORKSPACE SECTION -->
   <section class="isolation">
-    <h2 class="visually-hidden">Main container for the "Benefits of a Comfortable Workspace" section.</h2>
+    <h2 class="hidden-from-view">Main container for the "Benefits of a Comfortable Workspace" section.</h2>
     <section class="inner-isolation">
-      <h2 class="visually-hidden">Content about the benefits of a comfortable workspace.</h2>
+      <h2 class="hidden-from-view">Content about the benefits of a comfortable workspace.</h2>
       <article class="isolation-text">
         <h2>Benefits of a Comfortable Workspace</h2>
       </article>
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">Overview of key benefits for a comfortable workspace.</h2>
+        <h2 class="hidden-from-view">Overview of key benefits for a comfortable workspace.</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">Physical Health Benefits</h2>
+          <h2 class="hidden-from-view">Physical Health Benefits</h2>
           <p><strong>Physical Health</strong></p>
           <p>
             A comfortable workspace can prevent physical strain and long-term
@@ -87,7 +86,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">Focus and Productivity Improvements</h2>
+          <h2 class="hidden-from-view">Focus and Productivity Improvements</h2>
           <p>
             <strong>Improved Focus and Productivity</strong>
           </p>
@@ -102,9 +101,9 @@
       </section>
 
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">Mental Well-being Advantages</h2>
+        <h2 class="hidden-from-view">Mental Well-being Advantages</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">Block 3 with all information</h2>
+          <h2 class="hidden-from-view">Block 3 with all information</h2>
           <p><strong>Mental Well-being</strong></p>
           <p>
             A comfortable and aesthetically pleasing workspace can reduce
@@ -115,7 +114,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">Creativity Enhancement</h2>
+          <h2 class="hidden-from-view">Creativity Enhancement</h2>
           <p>
             <strong>Increased Creativity</strong>
           </p>
@@ -144,7 +143,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h3 class="visually-hidden">Footer Information and Social Links.</h3>
+      <h3 class="hidden-from-view">Footer Information and Social Links.</h3>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
