--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <meta name="description"
     content="Welcome to Work Balance. Your one-stop solution for remote work wellness and work-life balance. Access mental health resources and contact us for more info.">
-  <meta name="keywords"
-    content="work balance, remote work, wellness, work-life balance, mental health, productivity, relaxation, remote work tips, well-being resources, stress management, burnout prevention">
+  <meta name="keywords" content="work balance, remote work, work-life balance, mental health, burnout prevention">
   <meta name="author" content="Leandro A Nuñez B">
 </head>
 
@@ -21,7 +20,7 @@
   <main>
     <header class="hero-section home-page">
       <section class="hero-content">
-        <h2 class="visually-hidden">All content regarding the hero section.</h2>
+        <h2 class="hidden-from-view">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
@@ -43,7 +42,7 @@
         <h1 class="hero-heading">Welcome to Work Balance!</h1>
         <p>Your one stop solution for remote work wellness and work-life balance.</p>
         <section class="hero-buttons">
-          <h2 class="visually-hidden">Hero button wrapper.</h2>
+          <h2 class="hidden-from-view">Hero button wrapper.</h2>
           <a href="wellbeing-tips.html" class="hero-button">Mental Health Resources</a>
           <a href="wellbeing-tips.html" class="hero-button">Contact Us</a>
         </section>
@@ -53,9 +52,9 @@
 
   <!-- INTRODUCTION SECTION -->
   <section class="introduction">
-    <h2 class="visually-hidden">Main container for the introduction section.</h2>
+    <h2 class="hidden-from-view">Main container for the introduction section.</h2>
     <section class="inner-introduction">
-      <h3 class="visually-hidden">Introduction texts.</h3>
+      <h3 class="hidden-from-view">Introduction texts.</h3>
       <article>
         <h2>Supporting Your Journey to Remote Work Success</h2>
         <p>
@@ -80,9 +79,9 @@
 
   <!-- SEMI-CTA SECTION -->
   <section class="section-3">
-    <h2 class="visually-hidden">Main container for section 3.</h2>
+    <h2 class="hidden-from-view">Main container for section 3.</h2>
     <section class="inner-section-3">
-      <h3 class="visually-hidden">Section 3 texts.</h3>
+      <h3 class="hidden-from-view">Section 3 texts.</h3>
       <article>
         <h2>Find the Help You Need for a Better Work-Life Balance</h2>
         <p>
@@ -92,7 +91,7 @@
         </p>
       </article>
       <section class="general-buttons">
-        <h2 class="visually-hidden">Buttons wrapper.</h2>
+        <h2 class="hidden-from-view">Buttons wrapper.</h2>
         <a href="wellbeing-tips.html" class="general-button">Wellbeing Tips</a>
         <a href="quick-breaks.html" class="general-button">Quick breaks ideas</a>
         <a href="chill-spots.html" class="general-button">Chill Spots</a>
@@ -102,9 +101,9 @@
 
   <!-- SEMI-CTA SECTION -->
   <section class="section-4 your-guide">
-    <h2 class="visually-hidden">Main container for section 4.</h2>
+    <h2 class="hidden-from-view">Main container for section 4.</h2>
     <section class="inner-section-4">
-      <h3 class="visually-hidden">All section 4 text</h3>
+      <h3 class="hidden-from-view">All section 4 text</h3>
       <article>
         <h3>Your Guide to Remote Work Wellness</h3>
         <p>
@@ -120,9 +119,9 @@
 
   <!-- FOR WHOM IS THIS WEBSITE SECTION -->
   <section class="split-in-2 reverse white-bg">
-    <h2 class="visually-hidden">Main container for "FOR WHOM IS THIS WEBSITE" section</h2>
+    <h2 class="hidden-from-view">Main container for "FOR WHOM IS THIS WEBSITE" section</h2>
     <section class="container-split">
-      <h3 class="visually-hidden">Inner container.</h3>
+      <h3 class="hidden-from-view">Inner container.</h3>
       <figure class="picture-box">
         <img src="img/girl-using-computer.webp" alt="Girl using computer" title="Girl using computer for remote work">
         <figcaption>
@@ -158,9 +157,9 @@
 
   <!-- KEY FEATURE SECTION -->
   <section class="split-in-2">
-    <h2 class="visually-hidden">Main container for "KEU FEATURE" section.</h2>
+    <h2 class="hidden-from-view">Main container for "KEU FEATURE" section.</h2>
     <section class="container-split">
-      <h3 class="visually-hidden">Inner container for "KEY FEATURE" section</h3>
+      <h3 class="hidden-from-view">Inner container for "KEY FEATURE" section</h3>
       <figure class="picture-box">
         <img src="img/playing-games.webp" alt="playing air hockey game" title="Engaging in an Air Hockey Game">
       </figure>
@@ -188,9 +187,9 @@
 
   <!-- CALL TO ACTION SECTION -->
   <section class="CTA">
-    <h2 class="visually-hidden">Main container for section "CAL TO ACTION" section.</h2>
+    <h2 class="hidden-from-view">Main container for section "CAL TO ACTION" section.</h2>
     <section class="CTA-picture">
-      <h3 class="visually-hidden">Inner container for section "CALL TO ACTION" section.</h3>
+      <h3 class="hidden-from-view">Inner container for section "CALL TO ACTION" section.</h3>
       <article class="CTA-text-box">
         <h3>
           Are you ready to change the way you live? Start exploring our
@@ -226,7 +225,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h3 class="visually-hidden">Footer Information and Social Links.</h3>
+      <h3 class="hidden-from-view">Footer Information and Social Links.</h3>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
@@ -246,7 +245,7 @@
     <h2>We use cookies</h2>
     <p>This website use cookies to ensure you get the best experience on our website.</p>
     <section class="button-group">
-      <h3 class="visually-hidden">Cookies buttons wrapper</h3>
+      <h3 class="hidden-from-view">Cookies buttons wrapper</h3>
       <button class="general-button" id="yesButton">Yes</button>
       <button class="general-button" id="noButton">No</button>
     </section>
