--- a/quick-breaks.html
+++ b/quick-breaks.html
@@ -9,7 +9,7 @@
   <meta name="description"
     content="Discover quick break ideas to refresh your mind and body during work. Tips on connecting with nature, listening to music, and staying hydrated.">
   <meta name="keywords"
-    content="quick breaks, work wellness, mental refresh, connect with nature, music, hydration, work-life balance, productivity tips, relaxation activities">
+    content="work wellness, mental refresh, connect with nature, productivity tips, relaxation activities">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -21,7 +21,7 @@
   <main>
     <header class="hero-section">
       <section class="hero-content quick-breaks">
-        <h2 class="visually-hidden">All content regarding the hero section.</h2>
+        <h2 class="hidden-from-view">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
@@ -47,9 +47,9 @@
 
   <!-- NEED A BREAK SECTION -->
   <section class="section-4">
-    <h2 class="visually-hidden">Main container for "NEED A BREAK" section.</h2>
+    <h2 class="hidden-from-view">Main container for "NEED A BREAK" section.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">Inner container for "NEED A BREAK" section.</h2>
+      <h2 class="hidden-from-view">Inner container for "NEED A BREAK" section.</h2>
       <article>
         <h2>Need a break?</h2>
         <h3>Here are some quick activities to refresh your mind and body during your workday.</h3>
@@ -64,9 +64,9 @@
 
   <!-- BLOCKS WITH IMAGES ANF INFORMATION SECTION -->
   <section class="image-blocks">
-    <h2 class="visually-hidden">Main container for "BLOCKS WITH IMAGES" section.</h2>
+    <h2 class="hidden-from-view">Main container for "BLOCKS WITH IMAGES" section.</h2>
     <section class="inner-blocks white-background">
-      <h2 class="visually-hidden">Inner container for "BLOCKS WITH IMAGES" section.</h2>
+      <h2 class="hidden-from-view">Inner container for "BLOCKS WITH IMAGES" section.</h2>
       <figure class="image-block-1">
         <img src="img/connect-with-nature.webp" alt="Nature scene for relaxation"
           title="Connect with Nature - Relaxing activity" class="image-block">
@@ -102,9 +102,9 @@
 
   <!-- BLOCKS WITH IMAGES ANF INFORMATION SECTION -->
   <section class="image-blocks">
-    <h2 class="visually-hidden">Main container for "BLOCKS WITH IMAGES" section.</h2>
+    <h2 class="hidden-from-view">Main container for "BLOCKS WITH IMAGES" section.</h2>
     <section class="inner-blocks">
-      <h2 class="visually-hidden">Inner container for "BLOCKS WITH IMAGES" section.</h2>
+      <h2 class="hidden-from-view">Inner container for "BLOCKS WITH IMAGES" section.</h2>
       <figure class="image-block-1">
         <img src="img/listening-to-music.webp" alt="Listening to music with headphones"
           title="Listen to Music - Refreshing activity" class="image-block">
@@ -149,7 +149,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h3 class="visually-hidden">Footer Information and Social Links.</h3>
+      <h3 class="hidden-from-view">Footer Information and Social Links.</h3>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
