--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -8,8 +8,7 @@
   <meta name="author" content="Leandro A Nuñez B">
   <meta name="description"
     content="Explore practical tips for managing burnout, setting boundaries, and enhancing well-being for a balanced work-from-home life.">
-  <meta name="keywords"
-    content="well-being tips, burnout management, work-life balance, mental health, remote work, self-care, mindfulness, stress management">
+  <meta name="keywords" content="burnout management, work-life balance, mental health, remote work, stress management">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -21,7 +20,7 @@
   <main>
     <header class="hero-section">
       <section class="hero-content wellbeing-tips">
-        <h2 class="visually-hidden">All content regarding the hero section.</h2>
+        <h2 class="hidden-from-view">All content regarding the hero section.</h2>
         <nav class="main-navigation">
           <figure class="brand-logo">
             <a href="index.html">
@@ -47,9 +46,9 @@
 
   <!-- WHAT IS BURNOUT? SECTION -->
   <section class="section-4">
-    <h2 class="visually-hidden">Main container of "WHAT IS BURNOUT" section.</h2>
+    <h2 class="hidden-from-view">Main container of "WHAT IS BURNOUT" section.</h2>
     <section class="inner-section-4">
-      <h2 class="visually-hidden">Inner container of "WHAT IS BURNOUT" section.</h2>
+      <h2 class="hidden-from-view">Inner container of "WHAT IS BURNOUT" section.</h2>
       <article>
         <h2>What is burnout?</h2>
         <h3>Understanding Burnout</h3>
@@ -70,9 +69,9 @@
 
   <!-- TAKE BREAKS SECTION -->
   <section class="split-in-2 reverse white-bg">
-    <h2 class="visually-hidden">Main container for "TAKE BREAKS" section.</h2>
+    <h2 class="hidden-from-view">Main container for "TAKE BREAKS" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Container split in 2 for image and text.</h2>
+      <h2 class="hidden-from-view">Container split in 2 for image and text.</h2>
       <figure class="picture-box">
         <img src="img/playing-table-games.webp" alt="Two people playing a table game for social engagement"
           title="Engaging in social games for mental well-being">
@@ -101,9 +100,9 @@
 
   <!-- BOUNDARIES SECTION -->
   <section class="split-in-2">
-    <h2 class="visually-hidden">Main container for the "BOUNDARIES" section.</h2>
+    <h2 class="hidden-from-view">Main container for the "BOUNDARIES" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Image and text content for setting boundaries.</h2>
+      <h2 class="hidden-from-view">Image and text content for setting boundaries.</h2>
       <figure class="picture-box">
         <img src="img/boundaries.webp" alt="Respect my boundaries" title="Learn how to set and maintaining boundaries">
         <figcaption>
@@ -131,9 +130,9 @@
 
   <!-- SEEK MENTAL HEALTH SECTION -->
   <section class="split-in-2 reverse white-bg">
-    <h2 class="visually-hidden">Main container of "SEEK MENTAL HELP" section.</h2>
+    <h2 class="hidden-from-view">Main container of "SEEK MENTAL HELP" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Image and text content for seeking mental health support.</h2>
+      <h2 class="hidden-from-view">Image and text content for seeking mental health support.</h2>
       <figure class="picture-box">
         <img src="img/seek-help-picture1.webp" alt="Seek mental health support"
           title="Mental health support for burnout recovery">
@@ -162,9 +161,9 @@
 
   <!-- PRACTICE SELFCARE SECTION -->
   <section class="split-in-2">
-    <h2 class="visually-hidden">Main container of "PRACTICE SELFCARE" section.</h2>
+    <h2 class="hidden-from-view">Main container of "PRACTICE SELFCARE" section.</h2>
     <section class="container-split">
-      <h2 class="visually-hidden">Image and text content for practicing self-care.</h2>
+      <h2 class="hidden-from-view">Image and text content for practicing self-care.</h2>
       <figure class="picture-box">
         <img src="img/girl-reading-book.webp" alt="Person reading a book for relaxation"
           title="Practicing self-care through reading">
@@ -193,9 +192,9 @@
 
   <!-- ISOLATION SECTION -->
   <section class="isolation">
-    <h2 class="visually-hidden">Main container of "ISOLATION" section.</h2>
+    <h2 class="hidden-from-view">Main container of "ISOLATION" section.</h2>
     <section class="inner-isolation">
-      <h2 class="visually-hidden">Practical tips for overcoming isolation.</h2>
+      <h2 class="hidden-from-view">Practical tips for overcoming isolation.</h2>
       <article class="isolation-text">
         <h2>Dealing with Isolation</h2>
         <p>
@@ -216,9 +215,9 @@
 
       <!-- FIRST ROW OF INFORMATION BLOCKS SECTION -->
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">Isolation strategies to stay connected and engaged.</h2>
+        <h2 class="hidden-from-view">Isolation strategies to stay connected and engaged.</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">Block 1 container.</h2>
+          <h2 class="hidden-from-view">Block 1 container.</h2>
           <p><strong>1. Schedule Virtual Coffee Chats</strong></p>
           <p>
             Stay socially connected by making regular virtual coffee breaks
@@ -229,7 +228,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">Join Online Communities with Shared Interests.</h2>
+          <h2 class="hidden-from-view">Join Online Communities with Shared Interests.</h2>
           <p>
             <strong>2. Join Online Communities with Shared Interests</strong>
           </p>
@@ -241,7 +240,7 @@
         </article>
 
         <article class="block-3">
-          <h2 class="visually-hidden">Take Part in Offline Activities.</h2>
+          <h2 class="hidden-from-view">Take Part in Offline Activities.</h2>
           <p><strong>3. Take Part in Offline Activities</strong></p>
           <p>
             Step away from the screen by participating in local events,
@@ -254,9 +253,9 @@
 
       <!-- SECOND ROW OF INFORMATION BLOCKS SECTION -->
       <section class="isolation-blocks">
-        <h2 class="visually-hidden">Extra ideas for overcoming feelings of isolation.</h2>
+        <h2 class="hidden-from-view">Extra ideas for overcoming feelings of isolation.</h2>
         <article class="block-1">
-          <h2 class="visually-hidden">Work from Co-Working Spaces.</h2>
+          <h2 class="hidden-from-view">Work from Co-Working Spaces.</h2>
           <p><strong>4. Work from Co-Working Spaces</strong></p>
           <p>
             Co-working spaces offer an opportunity to work alongside others,
@@ -267,7 +266,7 @@
         </article>
 
         <article class="block-2">
-          <h2 class="visually-hidden">Set Up a Buddy System.</h2>
+          <h2 class="hidden-from-view">Set Up a Buddy System.</h2>
           <p>
             <strong>5. Set Up a Buddy System</strong>
           </p>
@@ -279,7 +278,7 @@
         </article>
 
         <article class="block-3">
-          <h2 class="visually-hidden">Volunteer in Your Community.</h2>
+          <h2 class="hidden-from-view">Volunteer in Your Community.</h2>
           <p><strong>6. Volunteer in Your Community</strong></p>
           <p>
             Get involved in local volunteering opportunities. Helping others
@@ -305,7 +304,7 @@
       </ul>
     </nav>
     <section class="copyright">
-      <h3 class="visually-hidden">Footer Information and Social Links.</h3>
+      <h3 class="hidden-from-view">Footer Information and Social Links.</h3>
       <figure class="footer-logo">
         <img src="img/work-balance-logov5.svg" alt="Work Balance company logo in footer"
           title="Work Balance logo in footer">
