--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
         </table>
         <section class="take-care">
             <h2 class="hidden-from-view">Reminder to Take Care</h2>
-            <img src="img/take-care-picture.jpg" alt="A picture with a profound message."
+            <img src="img/self-care.webp" alt="A picture with a profound message."
                 title="A picture remainding us to take care of ourself" class="take-care-picture">
         </section>
     </section>
