--- a/wellbeing-tips.html
+++ b/wellbeing-tips.html
@@ -9,7 +9,7 @@
   <meta name="description"
     content="Explore practical tips for managing burnout, setting boundaries, and enhancing well-being for a balanced work-from-home life.">
   <meta name="keywords" content="burnout management, work-life balance, mental health, remote work, stress management">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
