--- a/chill-spots.html
+++ b/chill-spots.html
@@ -10,7 +10,7 @@
   <meta name="keywords"
     content="Kralingse Bos, Jan Evertsenplaats, Joost Banckertsplaats, Schouwburgplein, relaxation spots in the Netherlands">
   <meta name="author" content="Leandro A Nuñez B">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
