--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Contact us for questions, feedback, and suggestions to enhance your experience with Work Balance.">
     <meta name="keywords" content="contact, work balance, feedback, suggestions, inquiries">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="icon" href="img/work-balance-favicon.png">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
