--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Work Balance - Remote Work Wellness and Work-Life Balance</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <meta name="description"
