--- a/quick-breaks.html
+++ b/quick-breaks.html
@@ -10,7 +10,7 @@
     content="Discover quick break ideas to refresh your mind and body during work. Tips on connecting with nature, listening to music, and staying hydrated.">
   <meta name="keywords"
     content="work wellness, mental refresh, connect with nature, productivity tips, relaxation activities">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
