--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -10,7 +10,7 @@
         content="Work Balance, wellbeing tips, relaxation spots, remote work support, mental health resources">
     <meta name="description"
         content="Thank you for contacting Work Balance! We have received your message and will get back to you shortly.">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
