--- a/workspace-tips.html
+++ b/workspace-tips.html
@@ -9,7 +9,7 @@
   <meta name="description"
     content="Explore essential tips for creating a comfortable workspace that enhances productivity, mental well-being, and creativity for remote work success.">
   <meta name="keywords" content="workspace tips, productivity, remote work, comfortable workspace, mental well-being">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
