--- a/chill-spots.html
+++ b/chill-spots.html
@@ -10,7 +10,6 @@
   <meta name="keywords"
     content="Kralingse Bos, Jan Evertsenplaats, Joost Banckertsplaats, Schouwburgplein, relaxation spots in the Netherlands">
   <meta name="author" content="Leandro A Nuñez B">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
@@ -29,7 +28,7 @@
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                 title="Work Balance company logo"></a>
           </figure>
-          <label class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
+          <label class="hamburger-bars">≡</label>
           <aside class="navigation-links-wrapper">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -165,8 +164,8 @@
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
       </p>
       <address class="icons">
-        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a class="facebook" href="https://www.facebook.com/">Facebook</a>
+        <a class="instagram" href="https://www.instagram.com/">Instagram</a>
       </address>
     </section>
   </footer>
