--- a/workspace-tips.html
+++ b/workspace-tips.html
@@ -9,7 +9,6 @@
   <meta name="description"
     content="Explore essential tips for creating a comfortable workspace that enhances productivity, mental well-being, and creativity for remote work success.">
   <meta name="keywords" content="workspace tips, productivity, remote work, comfortable workspace, mental well-being">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="icon" href="img/work-balance-favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
@@ -27,7 +26,7 @@
               <img src="img/work-balance-logov5.svg" class="logo-image" alt="Work Balance Logo"
                 title="Work Balance company logo"></a>
           </figure>
-          <label class="menu-toggle-icon"><i class="fa fa-bars"></i></label>
+          <label class="hamburger-bars">≡</label>
           <aside class="navigation-links-wrapper">
             <ul class="navigation-links">
               <li><a href="index.html" class="navigation-item">Home</a></li>
@@ -152,8 +151,8 @@
         &copy; 2024 <strong>Work Balance</strong>, All Rights Reserved.
       </p>
       <address class="icons">
-        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a class="facebook" href="https://www.facebook.com/">Facebook</a>
+        <a class="instagram" href="https://www.instagram.com/">Instagram</a>
       </address>
     </section>
   </footer>
